compiler/test-data/parser/errors/scheme/missing_scheme_name.frel
module test

scheme {
    name : String
}
